kustomize/overlays/computate/ai-telemetry/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: ai-telemetry-cbca60
  name: aitelemetry
  labels:
    app.kubernetes.io/instance: aitelemetry
    app.kubernetes.io/name: aitelemetry
    deployment: aitelemetry
    app: aitelemetry
spec:
  replicas: 1
  revisionHistoryLimit: 0
  strategy:
    type: RollingUpdate
  selector:
    matchLabels:
      app.kubernetes.io/instance: aitelemetry
      app.kubernetes.io/name: aitelemetry
      deployment: aitelemetry
      app: aitelemetry
  template:
    metadata:
      labels:
        app.kubernetes.io/instance: aitelemetry
        app.kubernetes.io/name: aitelemetry
        deployment: aitelemetry
        app: aitelemetry
