kustomize/overlays/computate/ai-telemetry/networkpolicy.yaml
kind: NetworkPolicy
apiVersion: networking.k8s.io/v1
metadata:
  name: vscode-computate
spec:
  podSelector:
    matchLabels:
      notebook-name: computate
  ingress:
    - ports:
        - protocol: TCP
          port: 10210
  policyTypes:
    - Ingress
